tests/conformance/typecheck/invalid/unknown_var.ks
// EXPECT: Unknown variable
val x = y
